changed images and fixed little bugs everywhere

--- a/Projet Web Commerce/Projet Web Commerce.csproj
+++ b/Projet Web Commerce/Projet Web Commerce.csproj
@@ -45,4 +45,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\data\images\" />
+    <Folder Include="wwwroot\data\pdf\" />
+  </ItemGroup>
+
 </Project>
