--- a/Projet Web Commerce/Projet Web Commerce.csproj
+++ b/Projet Web Commerce/Projet Web Commerce.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.1" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="KendoUICore" Version="2024.1.130" />
     <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.2" />
