--- a/Projet Web Commerce/Projet Web Commerce.csproj
+++ b/Projet Web Commerce/Projet Web Commerce.csproj
@@ -47,6 +47,7 @@
 
 
   <ItemGroup>
+    <Folder Include="wwwroot\data\piecesJointes\" />
     <Folder Include="wwwroot\data\pdf\" />
   </ItemGroup>
 
